--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title></title>
   </head>
   <body>
-    <p>*87*</p>
+    <p>W87W</p>
   </body>
 </html>
